--- a/src/app/template/switches/switches.component.html
+++ b/src/app/template/switches/switches.component.html
@@ -48,8 +48,8 @@
                         <input
                             class="form-check-input"
                             type="checkbox"
-                            name="canRecibeNotifications"
-                            [(ngModel)]="person.canRecibeNotifications"
+                            name="canReceiveNotifications"
+                            [(ngModel)]="person.canReceiveNotifications"
                             id="notifications"
                         >
                         <label for="notifications" class="form-check-label">Want to receive notifications</label>
